export interface Building {
  id: number;
  name: string;
  address: string;
  nbFloors: number;
}
