export interface Equipment {
  id: number;
  name: string;
  type: string;
  available: number;
  roomId: number;
}
