@startuml domain_diagram

title Diagramme de Domaine

' =====================
' Acteur
' =====================
class User {
  - id: int
  - first_name: string
  - last_name: string
  - email: string
  - password: string
  - role: string <<user/admin>>
  - status: int <<active/blocked>>
}

' =====================
' Gestion des bâtiments et salles
' =====================
class Building {
  - id: int
  - name: string
  - address: string
  - nb_floors: int
}

class Room {
  - id: int
  - name: string
  - capacity: int
  - floor: int
  - state: int <<active/inactive>>
  - location: string
}

Building "1" -- "0..*" Room : contains >

' =====================
' Équipements
' =====================
class Equipment {
  - id: int
  - name: string
  - type: string
  - available : int
}

Room "0..1" -- "0..*" Equipment : possesses >

' =====================
' Réservations
' =====================
class Reservation {
  - id: int
  - start_date: datetime
  - end_date: datetime
  - status: string <<confirmed / cancelled / modified>>
  - comment: string
}

User "1" -- "0..*" Reservation : makes >
Room "1" -- "0..*" Reservation : reserved in >

' =====================
' Tickets de support
' =====================
class Request {
  - id: int
  - type: string <<incident / request>>
  - description: string
  - status: int <<open / closed>>
  - creation_date: datetime
}

User "1" -- "0..*" Request : creates >

' =====================
' Paramètres
' =====================
class Parameter {
  - id: int
  - name: string
  - value: string
}

User "0" -- "0..*" Parameter : manages if admin >

@enduml